--- a/index.html
+++ b/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-      <title>HTML Signup </title>
+      <title>HTML Login Form</title>
       <link rel="stylesheet" href="style.css">
 </head>
 <body>
       <div class="main">
-        <h1>Signup</h1>
-           <form action="">
-            <label for="first">Firstname:</label>
-              <input type="text" id="first" name="first" placeholder="Enter your Firstname" required>
-              <label for="first">Username:</label>
-              <input type="text" id="first" name="first" placeholder="Enter your Username" required>
-              <label for="email">Email</label>
-              <input type="text"  id="email" name="email" placeholder="Enter your email" required>
-              <label for="password">Password:</label>
-              <input type="password"id="password" name="password"placeholder="Enter your Password" required>
-              <label for="first">Re-enter Password:</label>
-              <input type="text" id="first" name="first" placeholder="Re-enter your password" required/>
-              <div class="wrap">
-                  <button type="signup"onclick="solve()">signup</button>
-              </div>
+            <h1>Login Form</h1>
+            <form action="">
+                  <label for="first">
+                        Username:
+                  </label>
+                  <input type="text" 
+                         id="first" 
+                         name="first" 
+                         placeholder="Enter your Username" required>
+
+                  <label for="password">
+                        Password:
+                  </label>
+                  <input type="password"
+                         id="password" 
+                         name="password"
+                         placeholder="Enter your Password" required>
+
+                  <div class="wrap">
+                    <button type="Login"
+                                onclick="solve()">
+                              Login
+                        </button>
+                  </div>
             </form>
       </div>
 </body>
